--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,6 +27,7 @@ navigationCompose = "2.8.7"
 coreKtxVersion = "1.7.0"
 junitKtx = "1.3.0"
 turbine = "1.2.1"
+fragmentCompose = "1.8.9"
 
 [libraries]
 androidx-compose-bom = { module = "androidx.compose:compose-bom", version.ref = "composeBomVersion" }
@@ -69,6 +70,7 @@ hilt-android-compiler = {module = "com.google.dagger:hilt-android-compiler", ver
 core-ktx = { group = "androidx.test", name = "core-ktx", version.ref = "coreKtxVersion" }
 androidx-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "junitKtx" }
 turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
+androidx-fragment-compose = { group = "androidx.fragment", name = "fragment-compose", version.ref = "fragmentCompose" }
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
